fixed line height on mobile display

--- a/main.css
+++ b/main.css
@@ -325,7 +325,7 @@ text-transform: uppercase;
 }
 
 .pop-ups-paragraph-forms {
-	height: 100vh;
+	/* height: 100vh; */
 	grid-column:  1 / 3;
 	overflow: hidden;
 }
@@ -543,7 +543,7 @@ nav {
 
 
 .pop-up-text-card {
-	line-height: 2;
+	line-height: 2.5;
 }
 
 .pop-up-image-container {
@@ -649,7 +649,7 @@ footer nav a {
 	}
 
 	.pop-up-text-card p {
-		line-height: 1.2;
+		line-height: 1.5;
 	}
 
 	form {
